# Discern

./: CMakeLists.txt  Disc_shape.cpp  README.md
Sample_data/Data_Discernment/BS/: dessertspoonbinary30.txt  dinnerknifebinary18.txt  fishslicebinary78.txt  spatulabinary47.txt  tongsbinary35.txt
Sample_data/Data_Discernment/DP/: dessertspoonbinary30_DP.txt  dinnerknifebinary18_DP.txt  fishslicebinary78_DP.txt  spatulabinary47_DP.txt  tongsbinary35_DP.txt
Sample_data/Shape_recon/: ALIEN.txt  CAT.txt  DOLPHIN.txt  dog-5.txt  dog-5_with_outlier.txt  simple1.txt  turtle01-10_10.txt
